--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -94,6 +94,26 @@
             font-weight: bolder;
         }
 
+        .lastScore {
+            color: green;
+        }
+
+        .winningImage {
+            width: 100px;
+            height: 100px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            margin-right: 10px;
+        }
+
+        .losingImage {
+            width: 100px;
+            height: 100px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            opacity: 50%;
+        }
+
     </style>
 </head>
 </head>
@@ -134,6 +154,8 @@
             </div>
         </div>
     </div>
+
+    <div id="focusPoint"></div>
     
     <script src="./javascript.js"></script>
 </body>
