Move player scores to user input panel

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container" class="container flex">
 
         <h1>Rock, Paper, Scissors</h1>
-        <p>Welcome to Rock, Paper, Scissors! Click the button below to begin the game!</p>
+        <p>Welcome to Rock, Paper, Scissors! Click the play button to begin the game!</p>
         
         <div id="rules" class="full-width">
             <strong>Rules:</strong>
@@ -30,18 +30,7 @@
             <button id="reset" class="btn">Reset</button>
         </div>
 
-        <div id="gameContainer" class="game-container full-width">
-            <div id="stats" class="stats-container flex full-width">
-                <div id="playerStats" class="stats flex">
-                    <div id="playerScoreLabel" class="score-label">Player</div>
-                    <div id="playerScore" class="score"></div>
-                </div>
-                <div id="computerStats" class="stats flex">
-                    <div id="computerScoreLabel" class="score-label">Computer</div>
-                    <div id="computerScore" class="score"></div>
-                </div>
-            </div>
-        </div>
+        <div id="gameContainer" class="game-container full-width"></div>
     </div>
     
     <script src="./javascript.js"></script>
